// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MedicalPrescriptionDueDateBar component when payment info is expired should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "#475A6D",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={40}
    bbWidth={40}
    focusable={false}
    height={40}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 40,
          "width": 40,
        },
      ]
    }
    vbHeight={40}
    vbWidth={40}
    width={40}
  >
    <RNSVGGroup>
      <RNSVGGroup
        name="calendar"
      >
        <RNSVGPath
          d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
          fill={4294967295}
          name="icon"
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGText
          alignmentBaseline="central"
          content={null}
          dx={Array []}
          dy={Array []}
          fill={4282866285}
          font={
            Object {
              "fontSize": 10,
              "textAnchor": "middle",
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
          rotate={Array []}
          x={
            Array [
              "50%",
            ]
          }
          y={
            Array [
              "30%",
            ]
          }
        >
          <RNSVGTSpan
            content="Nov"
            dx={Array []}
            dy={Array []}
            font={Object {}}
            rotate={Array []}
            x={Array []}
            y={Array []}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="central"
          content={null}
          dx={Array []}
          dy={Array []}
          fill={4282866285}
          font={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "textAnchor": "middle",
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
          rotate={Array []}
          x={
            Array [
              "50%",
            ]
          }
          y={
            Array [
              "65%",
            ]
          }
        >
          <RNSVGTSpan
            content="17"
            dx={Array []}
            dy={Array []}
            font={Object {}}
            rotate={Array []}
            x={Array []}
            y={Array []}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    hspacer={true}
    small={true}
    style={Object {}}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    white={true}
  >
    The prescription expired at
    <Text
      bold={true}
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      white={true}
    >
       12.32 
    </Text>
    on
    <Text
      bold={true}
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      white={true}
    >
       11/17/2021
    </Text>
  </Text>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is expiring should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "#D0021B",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={40}
    bbWidth={40}
    focusable={false}
    height={40}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 40,
          "width": 40,
        },
      ]
    }
    vbHeight={40}
    vbWidth={40}
    width={40}
  >
    <RNSVGGroup>
      <RNSVGGroup
        name="calendar"
      >
        <RNSVGPath
          d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
          fill={4294967295}
          name="icon"
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGText
          alignmentBaseline="central"
          content={null}
          dx={Array []}
          dy={Array []}
          fill={4291822107}
          font={
            Object {
              "fontSize": 10,
              "textAnchor": "middle",
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
          rotate={Array []}
          x={
            Array [
              "50%",
            ]
          }
          y={
            Array [
              "30%",
            ]
          }
        >
          <RNSVGTSpan
            content="Nov"
            dx={Array []}
            dy={Array []}
            font={Object {}}
            rotate={Array []}
            x={Array []}
            y={Array []}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="central"
          content={null}
          dx={Array []}
          dy={Array []}
          fill={4291822107}
          font={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "textAnchor": "middle",
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
          rotate={Array []}
          x={
            Array [
              "50%",
            ]
          }
          y={
            Array [
              "65%",
            ]
          }
        >
          <RNSVGTSpan
            content="17"
            dx={Array []}
            dy={Array []}
            font={Object {}}
            rotate={Array []}
            x={Array []}
            y={Array []}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    hspacer={true}
    small={true}
    style={Object {}}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    white={true}
  >
    This prescription expires today
  </Text>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is not expirable should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      Object {
        "backgroundColor": "#F5F6F7",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    white={false}
  >
    This prescription expires the
    <Text
      bold={true}
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
    >
       11/17/2021
    </Text>
  </Text>
  <View
    spacer={true}
    style={Object {}}
    xsmall={true}
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={40}
      vbWidth={40}
      width={40}
    >
      <RNSVGGroup>
        <RNSVGGroup
          name="calendar"
        >
          <RNSVGPath
            d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
            fill={4282866285}
            name="icon"
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 10,
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "30%",
              ]
            }
          >
            <RNSVGTSpan
              content="Nov"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 18,
                "fontWeight": "bold",
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "65%",
              ]
            }
          >
            <RNSVGTSpan
              content="17"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      hspacer={true}
      small={true}
      style={Object {}}
    />
  </View>
</View>
`;

exports[`MedicalPrescriptionDueDateBar component when payment info is valid should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      Object {
        "backgroundColor": "#F5F6F7",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "flex": 1,
        },
      ]
    }
    white={false}
  >
    This prescription expires the
    <Text
      bold={true}
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
    >
       11/17/2021
    </Text>
  </Text>
  <View
    spacer={true}
    style={Object {}}
    xsmall={true}
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={40}
      vbWidth={40}
      width={40}
    >
      <RNSVGGroup>
        <RNSVGGroup
          name="calendar"
        >
          <RNSVGPath
            d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
            fill={4282866285}
            name="icon"
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 10,
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "30%",
              ]
            }
          >
            <RNSVGTSpan
              content="Nov"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 18,
                "fontWeight": "bold",
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "65%",
              ]
            }
          >
            <RNSVGTSpan
              content="17"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      hspacer={true}
      small={true}
      style={Object {}}
    />
  </View>
</View>
`;
